tests/invalid_tests/binary_operator_on_incompatible_types.minijava
class BinaryOp {
    public static void main() {
        boolean b;
        b = true;
        int x;
        x = 5;
        int y;
        y = b + x;
    }
}
